js262/test/language/module-code/parse-err-decl-pos-import-for-let.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (let x = 0; false;)
  import v from './decl-pos-import-for-let.js';
